# ARIA

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/agents/: orchestrator.md
.claude/skills/: aria-evaluate.md  aria-run.md  aria-setup.md  kg-builder.md
.github/workflows/: ci.yml
aria/: __init__.py  engine.py  types.py
aria/data/: __init__.py
aria/evaluation/: __init__.py  benchmark.py  judge.py  metrics.py
aria/kg/: __init__.py  diagnostics.py  graph_store.py  schema.py
aria/llm/: __init__.py  client.py  embeddings.py
aria/materials/: __init__.py  constraints.py  psp.py  units.py
aria/reasoning/: __init__.py  literature.py  prompts.py  router.py  tier1_direct.py  tier2_analogical.py  tier3_fallback.py
aria/retrieval/: __init__.py  completeness.py  evidence_ranker.py  path_search.py  similarity.py
aria/visualization/: __init__.py  graph_viz.py  jhu_theme.py  trace_viz.py
data/: KG_PIPELINE.md  aria_2d_kg_tiny.json
data/benchmarks/: forward_prediction.jsonl  inverse_design.jsonl  ood_generalization.jsonl
docs/: api.md  data_card.md  index.html  kg_card.md  tool_card.md  website-README.md
docs/assets/css/: aria.css
docs/website/: _config.yml  index.html
examples/: 01_build_psp_kg.ipynb  02_forward_prediction.ipynb  03_inverse_design.ipynb  04_causal_traces_and_evaluation.ipynb  05_end_to_end_tutorial.ipynb
scripts/: build_kg.py  evaluate.py  migrate_kg.py  run_benchmark.py
tests/: conftest.py  test_benchmark.py  test_engine.py  test_kg.py  test_metrics.py  test_reasoning_router.py  test_retrieval.py  test_types.py
(+11 files in other folders)
